--- a/app/src/main/res/layout/fragment_logout.xml
+++ b/app/src/main/res/layout/fragment_logout.xml
@@ -5,6 +5,7 @@
     android:id="@+id/fragmentLogout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/holiday3"
     tools:context=".ui.logout.LogoutFragment">
 
     <TextView
@@ -16,13 +17,13 @@
         android:layout_marginEnd="8dp"
         android:textAlignment="center"
         android:textColor="#FA0202"
-        android:textSize="20sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.35" />
+        app:layout_constraintVertical_bias="0.25" />
 
     <Button
         android:id="@+id/logoutButton"
