--- a/app/src/main/res/layout/add_comment.xml
+++ b/app/src/main/res/layout/add_comment.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
 
     <EditText
-        android:id="@+id/editTextTextMultiLine"
+        android:id="@+id/nameNewCategory"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
@@ -31,7 +31,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />
+        app:layout_constraintTop_toBottomOf="@+id/nameNewCategory" />
 
     <Button
         android:id="@+id/addCommentButton"
